--- a/Promise.xcodeproj/xcshareddata/xcschemes/Promise-Package.xcscheme
+++ b/Promise.xcodeproj/xcshareddata/xcschemes/Promise-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1030"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4BC6610323485B29008CE37F"
+               BlueprintIdentifier = "Promise::Promise"
                BuildableName = "Promise.framework"
                BlueprintName = "Promise"
                ReferencedContainer = "container:Promise.xcodeproj">
@@ -26,29 +26,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4BC6610C23485B29008CE37F"
+               BlueprintIdentifier = "Promise::PromiseTests"
                BuildableName = "PromiseTests.xctest"
                BlueprintName = "PromiseTests"
                ReferencedContainer = "container:Promise.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4BC6610323485B29008CE37F"
-            BuildableName = "Promise.framework"
-            BlueprintName = "Promise"
-            ReferencedContainer = "container:Promise.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -65,7 +55,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4BC6610323485B29008CE37F"
+            BlueprintIdentifier = "Promise::Promise"
             BuildableName = "Promise.framework"
             BlueprintName = "Promise"
             ReferencedContainer = "container:Promise.xcodeproj">
@@ -80,15 +70,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4BC6610323485B29008CE37F"
-            BuildableName = "Promise.framework"
-            BlueprintName = "Promise"
-            ReferencedContainer = "container:Promise.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
